# greetings

./: .gitignore  Makefile.am  README.md  configure.ac  greetings.c
